--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>Our Founders</h2>
             <ul>
                 <li>Un Kra U</li>
-                <li>Khaing Ja Prue</li>
+                <li>Khaing Ching</li>
                 <li>Shwe Hla Fru</li>
             </ul>
             <h2>Our Mission</h2>
