--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>Our Founders</h2>
             <ul>
                 <li>Un Kra U</li>
-                <li>Khaing Ching</li>
+                <li>Khaing Ja Prue</li>
                 <li>Shwe Hla Fru</li>
             </ul>
             <h2>Our Mission</h2>
@@ -89,6 +89,7 @@
                         <th>Reason</th>
                         <th>Income / Expenses</th>
                         <th>Fund Balance</th>
+                        <th>Note</th>
                     </tr>
                 </thead>
                 <tbody id="fundTableBody"></tbody>
@@ -140,7 +141,7 @@
             <div class='timeline'>
                 <div class='event'>
                     <h3>2005</h3>
-                    <p>Shwe Kraoo Buddhist Temple is established by Un Kra U, Khaing Ja Prue and Shwe Hla Fru with a mission to promote and preserve the core values and teachings of buddhism.</p>
+                    <p>Shwe Kraoo Buddhist Temple is established by Un Kra U, Khaing Ching and Shwe Hla Fru with a mission to promote and preserve the core values and teachings of buddhism.</p>
                 </div>
                 <div class='event'>
                     <h3>2010</h3>
