--- a/index.html
+++ b/index.html
@@ -363,7 +363,9 @@
                 <input type='email' id='email' name='email' required>
                 <label for='message'>Message:</label>
                 <textarea id='message' name='message' required></textarea>
-                <button type='submit' class='button'>Send Message</button>
+                <!-- <button type='submit' class='button'>Send Message</button> -->
+                <a class="button" href="http://m.me/ShwekraooBuddhistTemple" target="_blank" rel="noopener noreferrer">Send Message</a>
+                 
             </form>
         </div>
     </main>
