--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
 
         <div id="about" class="page">
             <h1>About Shwe Kraoo Buddhist Temple</h1>
-            <p>Founded on June 15, 1911, Shwe Kraoo Buddhist Temple has been dedicated to making a positive impact in our community for over 150 years.</p>
+            <p>Founded on January 9, 1959, Shwe Kraoo Buddhist Temple has been dedicated to making a positive impact in our community for over 66 years.</p>
             <h2>Our Location</h2>
             <p>Harbang, Chakariya, Cox's Bazar</p>
             <h2>Our Founders</h2>
             <ul>
-                <li>Un Kra U</li>
-                <li>Khaing Ja Prue</li>
-                <li>Shwe Hla Fru</li>
+                <li>U Apein</li>
+                <li>Daw Machenda</li>
             </ul>
             <h2>Our Mission</h2>
             <p>At Shwe Kraoo Buddhist Temple, we strive to promote and preserve the core values and teachings of buddhism.</p>
