--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class='timeline'>
                 <div class='event'>
                     <h3>2005</h3>
-                    <p>Shwe Kraoo Buddhist Temple is established by Un Kra U, Khaing Ching and Shwe Hla Fru with a mission to promote and preserve the core values and teachings of buddhism.</p>
+                    <p>The Shwe Kraoo Buddhist Temple was conceived by Shwe Hla Fru, who, along with her sisters Un Kra U and Khaing Ching, initiated its construction. Shwe Hla Fru's son, U Thoin Meyi, oversaw the building of the temple, which was then dedicated by the three sisters in the name of their parents, U Apein and Daw Machenda, with the aim of promoting and preserving the core values and teachings of Buddhism.</p>
                 </div>
                 <div class='event'>
                     <h3>2010</h3>
