--- a/Demand2.html
+++ b/Demand2.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <p>আপনার প্রস্তাবিত পরিকল্পনাটি উদ্দেশ্য বিহার পরিচালনার জন্য একটি শক্ত ভিত্তি প্রদান করা, এবং এটি স্বচ্ছতা, দায়িত্বশীলতা এবং আর্থিক স্থিতিশীলতার উপর জোর দেয়া।</p>
+    <p>আমার প্রস্তাবিত পরিকল্পনাটি উদ্দেশ্য বিহার পরিচালনার জন্য একটি শক্ত ভিত্তি প্রদান করা, এবং স্বচ্ছতা, দায়িত্বশীলতা এবং আর্থিক স্থিতিশীলতার উপর জোর দেয়া।</p>
 
     <hr>
 
