--- a/Demand1.html
+++ b/Demand1.html
@@ -106,15 +106,15 @@
 
         <div class="summary">
             <h2>সারাংশ</h2>
-            <ul>
+            <ol>
                 <li>ব্যয়ের থেকে আয় বেশি হতে হবে।</li>
-                <li>অপ্রয়োজনীয় জিনিসপত্র গুলো বিক্রি করে বিহার Fund এ সংরক্ষণ করা ও প্রয়োজনীয় জিনিসপত্রগুলো সঠিকভাবে সংরক্ষণ করা।</li>
-                <li>বিহারের সমস্ত কার্যক্রম সর্বোত্তম Transparency/স্বচ্ছতার সাথে পরিচালনা করা এবং স্বচ্ছতার জন্য ডিজিটালাইজ করা।</li>
-                <li>অভিযোগ বক্সের ব্যবস্থা করা।</li>
+                <li>অপ্রয়োজনীয় জিনিসপত্র গুলো বিক্রি করে বিহার Fund এ সংরক্ষণ করতে হবে ও প্রয়োজনীয় জিনিসপত্রগুলো সঠিকভাবে সংরক্ষণ করতে হবে।</li>
+                <li>বিহারের সমস্ত কার্যক্রম সর্বোত্তম Transparency/স্বচ্ছতার সাথে পরিচালনা করতে হবে এবং স্বচ্ছতার জন্য ডিজিটালাইজ করতে হবে</li>
+                <li>অভিযোগ বক্সের ব্যবস্থা করতে হবে।</li>
                 <li>বিহারের সদস্যদের যোগাযোগের মাধ্যম সহ Official তালিকা প্রকাশ করা।</li>
                 <li>কোন সদস্য কি পরিবর্তন ও সংষ্কার চাইবে সেটা লিখিতভাবে প্রকাশ করতে হবে।</li>
                 <li>পরিচালনা কারীদের উপযুক্ত বেতনের ব্যবস্থা করতে হবে।</li>
-            </ul>
+            </ol>
         </div>
     </div>
 </body>
